[gd_scene load_steps=2 format=3 uid="uid://cwecdj0jbvgtn"]

[ext_resource type="Script" path="res://main.gd" id="1_ty41u"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ty41u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 854.0
offset_top = 23.0
offset_right = 1122.0
offset_bottom = 296.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "(de)generate"

[node name="Cells" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 39.71)
layout_mode = 2
placeholder_text = "cells"

[node name="Max" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "max size"

[node name="Min" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "min size"

[node name="MaxI" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "max i"

[node name="WayW" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "way width"

[node name="Field" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Cells" type="Control" parent="Field"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Ways" type="Control" parent="Field"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="button_down" from="VBoxContainer/Button" to="." method="_on_button_button_down"]
